src/test/ui/error-codes/E0433.stderr
error[E0433]: failed to resolve. Use of undeclared type or module `HashMap`
  --> $DIR/E0433.rs:12:15
   |
LL |     let map = HashMap::new(); //~ ERROR E0433
   |               ^^^^^^^ Use of undeclared type or module `HashMap`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0433"
